# crash-mcp

./: .env.example  .gitignore  LICENSE  README.md  convert_kb.py  dify_knowledge_import.md  install.sh  pyproject.toml
.agent/rules/: mcp.md
data/chroma/: chroma.sqlite3
docs/: architecture_design.md  new_architecture.md  system_prompt.md
knowledge/methods/: hung_task.yaml  memory.yaml  mutex.yaml  null_ptr.yaml  oom.yaml  panic_info.yaml  rwsem.yaml  slab.yaml  softlockup.yaml  spinlock.yaml  stack_protector.yaml  stack_trace.yaml  task_list.yaml
knowledge/scripts/drgn/: __init__.py  address_detect.py  cpu_irq_stack.py  hung_task.py  list_traversal.py  lock_mutex.py  lock_rwsem.py  lock_spinlock.py  memory.py  panic_info.py  rbtree_traversal.py  rwsem.py  slab_dump.py  stack_trace.py  struct_inspect.py  task_list.py
src/crash_mcp/: compile_crash.py  config.py  context.py  discovery.py  drgn_session.py  models.py  prompts.py  resources.py  server.py  session.py  unified_session.py
src/crash_mcp/builder/: __init__.py  compile_crash.py  install_extensions.py  install_pykdump.py  utils.py
src/crash_mcp/common/: arch_detect.py  base_session.py  command_store.py  session.py  session_manager.py  unified_session.py  vmcore_discovery.py
src/crash_mcp/crash/: session.py
src/crash_mcp/drgn/: session.py
src/crash_mcp/kb/: __init__.py  case_manager.py  layered_retriever.py  models.py  retriever.py  simple_retriever.py  workflow.py
src/crash_mcp/resource/: loader.py  scripts.yaml  system_prompt.md
src/crash_mcp/tools/: analysis_scripts.py  get_info.py  kb_tools.py  output_tools.py  script_tools.py  session_mgmt.py  tool_logging.py  utils.py
tests/: conftest.py  test_discovery_standalone.py  test_drgn_session.py  test_server_dual.py  test_session.py  test_unified_session.py  verify_kb_path.py  verify_layered_kb.py  verify_workflow.py
tests/fixtures/: mock_crash.py  mock_drgn.py
tests/integration/: test_full_workflow.py
tests/unit/: test_command_store.py  test_crash_session.py  test_discovery.py  test_drgn_session.py  test_unified_session.py
