[project]
name = "crash-mcp"
version = "0.2.0"
description = "MCP server for crash dump analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.25.0",
    "python-dotenv>=1.2.1",
    "pexpect>=4.9.0",
    "drgn>=0.0.33",
    "drgn-tools @ git+https://github.com/oracle-samples/drgn-tools.git",
    "click>=8.3.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
crash-mcp = "crash_mcp.server:main"
compile-crash = "crash_mcp.builder.compile_crash:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/crash_mcp/resource/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crash_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

